syntax = "proto3";

package server;
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
option go_package = "protos/auth/";

service Auth {
    rpc Login(LoginRequest) returns (User) {}
    rpc Register(RegisterRequest) returns (User) {}
    rpc ChangePassword(ChangePasswordRequest) returns (google.protobuf.Empty) {}
    rpc ChangePasswordConsole(ChangePasswordConsoleRequest) returns (google.protobuf.Empty) {}
    rpc Logout(LogoutRequest) returns (google.protobuf.Empty) {}
    rpc LastLogin(LastLoginRequest) returns (LastLoginResponse) {}
    rpc UnRegister(UnRegisterRequest) returns (google.protobuf.Empty) {}
    rpc UpdateLastServer(UpdateLastServerRequest) returns (google.protobuf.Empty) {}
}

service UserService {
    rpc UpdateUser(UpdateUserRequest) returns (User) {}
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc AddIgnore(AddIgnoreRequest) returns (google.protobuf.Empty) {}
    rpc RemoveIgnore(RemoveIgnoreRequest) returns (google.protobuf.Empty) {}
    rpc GetIgnoreList(GetIgnoreListRequest) returns (GetIgnoreListResponse) {}
}

message AddIgnoreRequest {
    int64 user_id = 1;
    int64 ignore_id = 2;
}

message RemoveIgnoreRequest {
    int64 user_id = 1;
    int64 ignore_id = 2;
}

message GetIgnoreListRequest {
    int64 user_id = 1;
}

message IgnoreUser{
    int64 id = 1;
    string username = 2;
}

message GetIgnoreListResponse {
    repeated IgnoreUser ignore_list = 1;
}

message User {
    int64 id = 1;
    string username = 2;
    google.protobuf.Timestamp last_login = 3;
    string last_server = 4;
    string ip = 5;
    string registeredIp = 6;
    bool auth = 7;
    int32 locale_id = 8;
    bool linked = 9;
}

message LoginRequest {
    User user = 1;
    string password = 2;
}

message UpdateLastServerRequest{
    int64 user_id = 1;
    string last_server = 2;
}

message UpdateUserRequest {
    User user = 1;
}

message RegisterRequest {
    User user = 1;
    string password = 2;
}

message ChangePasswordRequest {
    string username = 1;
    string old_password = 2;
    string new_password = 3;
}

message ChangePasswordConsoleRequest {
    string username = 1;
    string new_password = 2;
}

message ChangePasswordResponse {
    bool success = 1;
    string reason = 2;
}

message LogoutRequest {
    string username = 1;
}

message LogoutResponse {
    bool success = 1;
    string reason = 2;
}

message LastLoginRequest {
    string username = 1;
}

message LastLoginResponse {
    bool success = 1;
    string reason = 2;
    string last_login = 3;
}

message GetUserRequest {
    string username = 1;
}

message GetUserResponse {
    bool success = 1;
    string reason = 2;
    User user = 3;
}


message UnRegisterRequest {
    string username = 1;
}

message UnRegisterResponse {
    bool success = 1;
    string reason = 2;
}

